# Calculator

./: README.md
Calculator/: CalculatorBrain.h  CalculatorBrain.m  CalculatorBrainCpp.cpp  CalculatorBrainCpp.hpp  CppViewController.mm  PendingBinaryOperationInfo.h  PendingBinaryOperationInfo.m  Ship.h  Vehicle.m  main.m
Calculator.xcodeproj/: project.pbxproj
Calculator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Calculator/Base.lproj/: Main.storyboard
Calculator/Calculator/: AppDelegate.m  CalculatorBrain.m  CppViewController.h  CppViewController.mm  Operation.h  Operation.m  ViewController.m
Calculator/Calculator.xcodeproj/: project.pbxproj
Calculator/Calculator/Base.lproj/: LaunchScreen.storyboard  (+1 more)
CalculatorLib/: CMakeLists.txt  CalculatorBrainCpp.hpp  PendingBinaryInformationInfoCpp.hpp
CalculatorLib.xcodeproj/: project.pbxproj
CalculatorLib/CalculatorLib/: CalculatorBrainCpp.cpp  CalculatorBrainCpp.hpp  PendingBinaryInformationInfoCpp.cpp
CalculatorLib/CalculatorLib.xcodeproj/: project.pbxproj
CalculatorLib/src/: CMakeLists.txt  CalculatorBrainCpp.cpp
CalculatorWorkspace.xcworkspace/: contents.xcworkspacedata
objectOrientedClass/: AppDelegate.h  CalculatorBrain.h  CalculatorBrain.m  CalculatorBrainCpp.cpp  CalculatorBrainCpp.hpp  CppViewController.mm  Operation.h  Operation.m  PendingBinaryInformationInfoCpp.cpp  PendingBinaryInformationInfoCpp.hpp  PendingBinaryOperationInfo.h  PendingBinaryOperationInfo.m  Ship.h  Ship.m  Vehicle.h  ViewController.h  ViewController.m
objectOrientedClass.xcodeproj/: project.pbxproj
(+11 files in other folders)
